# security_agent_middleware

./: .gitignore  CLAUDE.md  README.md  platanus-hack-project.json  project-description.md
cli/: README.md  package.json
docs/: README.md
identidad/: design.md
interceptor/: .env.example  .gitignore  README.md  pyproject.toml  railway.json
interceptor/app/: block_response.py  cascade.py  config.py  db.py  enums.py  main.py  models.py  nl_layer.py  openai_adapter.py  protocols.py  redact.py  schemas.py  upstream.py
interceptor/app/judge/: __init__.py  anthropic.py  factory.py  gemini.py  openai_compatible.py  prompt.py  types.py
interceptor/app/local_judge/: __init__.py  client.py  runtime.py  types.py
interceptor/scripts/: seed_policies.py  seed_prod.py  smoke_openai_compat_live.py
interceptor/tests/: test_judge_providers.py  test_local_judge_client.py  test_local_judge_e2e.py  test_openai_adapter.py  test_openai_route.py  test_prisma_metadata_schema.py
local-judge/: Dockerfile  README.md  pyproject.toml
local-judge/app/: __init__.py  config.py  main.py  parser.py  prompt.py  risk_taxonomy.py  schemas.py  vllm_client.py
local-judge/prompts/: local_judge_v1.md
local-judge/tests/: test_service.py
openspec/: config.yaml
research/: landscape.md  latam-ai-safety.csv  papers.md  yc-ai-safety.csv
scripts/: setup-multi-provider.sh  start-opencode-middleware.sh
specs/: 00-constitution.md  01-engine-interceptor.md  02-vdb-bootstrap.md  03-landing-page.md  04-admin-web.md  05-user-web.md  06-pitch-demo.md  07-requirements-docs.md  08-ai-suggestor.md  (+12 more)
(+124 files in other folders)
